--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -42246,5 +42246,157 @@
         "published": "Tue, 06 Jan 2026 12:24:22 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The shift in Alexa from just an Echo device to a browser interface with Alexa.com changes how it's used, especially at a time when OpenAI is moving towards audio-first devices. </p>\n<p>The post <a href=\"https://www.medianama.com/2026/01/223-alexa-beyond-voice-alexa-com-browser-interface/\">Amazon Brings Alexa+ to the Web With Alexa.com Browser Interface: What This Means</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/amazons-ring-doorbells-get-fire-alerts-an-app-store-and-new-sensors/",
+        "title": "Amazon\u2019s Ring doorbells get fire alerts, an app store and new sensors",
+        "link": "https://techcrunch.com/2026/01/06/amazons-ring-doorbells-get-fire-alerts-an-app-store-and-new-sensors/",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "The new Ring Sensors can detect motion, openings, glass breakage, and smoke, and can also monitor carbon monoxide levels, leaks, temperature changes, and air quality."
+    },
+    {
+        "id": "https://www.theverge.com/tech/844583/pila-makes-the-power-station-pretty",
+        "title": "Pila makes the power station pretty",
+        "link": "https://www.theverge.com/tech/844583/pila-makes-the-power-station-pretty",
+        "published": "2026-01-06T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Pila Energy's home batteries are now available to preorder with deliveries expected to begin in February 2026. These power stations are meant to be seen, unlike most batteries in this class that are better suited for job sites than designer lofts. Pila's home batteries are designed to keep critical devices like a fridge running during [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846600/dell-52-ultrasharp-thunderbolt-64-specs",
+        "title": "Dell made a big-ass 52-inch 6K Thunderbolt display",
+        "link": "https://www.theverge.com/tech/846600/dell-52-ultrasharp-thunderbolt-64-specs",
+        "published": "2026-01-06T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "The world's first 52-inch 6K monitor has arrived in Dell's UltraSharp 52 Thunderbolt Hub Monitor, which was announced at CES 2026. It's a 21:9 aspect ratio screen that's slightly curved (4200R) and can display up to 6,144 x 2,560 at up to 120Hz refresh rate (with VRR support). Its IPS Black panel type offers deeper [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/846633/dell-4k-32-qdoled-color-grading-specs-ultrasharp",
+        "title": "Dell\u2019s new 4K QD-OLED monitor offers true 10-bit color",
+        "link": "https://www.theverge.com/tech/846633/dell-4k-32-qdoled-color-grading-specs-ultrasharp",
+        "published": "2026-01-06T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Dell announced at CES 2026 that it'll launch the UltraSharp 32 4K QD-OLED Monitor on February 24th for $2,599.99. Despite having released a productivity-focused 4K QD-OLED of the same size in 2025 that regularly sold for well under $1,000, its new one costs more mainly due to having greater color accuracy for creative professionals. The [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/851270/vibe-bot-is-an-ai-agent-that-sits-on-your-desk",
+        "title": "Vibe Bot is an AI agent that sits on your desk",
+        "link": "https://www.theverge.com/tech/851270/vibe-bot-is-an-ai-agent-that-sits-on-your-desk",
+        "published": "2026-01-06T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Smart whiteboard manufacturer Vibe is expanding further into hybrid work hardware with the Vibe Bot, a physical AI device that can serve as a voice assistant, a smart webcam, and an AI note-taker, designed for office desks and meeting rooms. Despite the name, Vibe Bot is definitely not a robot. In fact it's closer to [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/852022/razers-new-controller-has-tmr-sticks-and-ultra-low-latency-bluetooth-for-use-with-tvs",
+        "title": "Razer\u2019s new controller has TMR sticks and ultra-low latency Bluetooth for use with TVs",
+        "link": "https://www.theverge.com/news/852022/razers-new-controller-has-tmr-sticks-and-ultra-low-latency-bluetooth-for-use-with-tvs",
+        "published": "2026-01-06T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Razer is announcing a new Wolverine V3 BT controller at CES 2026 that's designed for TVs. It's the world's first gamepad to use ultra-low latency Bluetooth, allowing it a sub-3ms response time, and the first accessory to launch under LG's \"Designed for LG Gaming Portal\" program. But since it's been developed in collaboration with LG, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/steve-jobs-ephemera-auction-apple/",
+        "title": "Steve Jobs\u2019 Early Apple Items Are Going Up for Auction\u2014Along With His Bow Ties",
+        "link": "https://www.wired.com/story/steve-jobs-ephemera-auction-apple/",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Some of the objects came from Steve Jobs\u2019 childhood bedroom. They\u2019re being made available by his stepbrother, John Chovanec."
+    },
+    {
+        "id": "https://www.wired.com/story/ring-watch-duty-team-up-wildfire-tracking/",
+        "title": "Ring and Watch Duty Team Up to Keep a Closer Eye on Wildfires",
+        "link": "https://www.wired.com/story/ring-watch-duty-team-up-wildfire-tracking/",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "WIRED",
+        "summary": "In a move to help alert people to the spread of nearby blazes, Ring is partnering with Watch Duty to let users share their videos on the wildfire tracking app."
+    },
+    {
+        "id": "https://www.engadget.com/computing/dell-unveils-a-massive-52-inch-6k-ultrawide-monitor-at-ces-2026-140024029.html?src=rss",
+        "title": "Dell unveils a massive 52-inch 6K ultrawide monitor at CES 2026",
+        "link": "https://www.engadget.com/computing/dell-unveils-a-massive-52-inch-6k-ultrawide-monitor-at-ces-2026-140024029.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:00:24 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Dell has unveiled an ultrawide, curved 52-inch 6K monitor at CES 2026. This productivity behemoth is designed for stock traders, engineers and other data professionals. Dell claims the UltraSharp 52 Thunderbolt Hub Monitor is the world's first 52-inch ultrawide curved 6K monitor (but with that many qualifiers almost anything can be a world first).</p>\n<p>Given Dell\u2019s experience in the monitor realm, this could be a dream display for professionals who handle vast data sets such as trading plat"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/pc/nvidias-g-sync-pulsar-tech-can-minimize-motion-blur-for-gamers-140000058.html?src=rss",
+        "title": "NVIDIA's G-Sync Pulsar tech can minimize motion blur for gamers",
+        "link": "https://www.engadget.com/gaming/pc/nvidias-g-sync-pulsar-tech-can-minimize-motion-blur-for-gamers-140000058.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/ai/everything-nvidia-announced-at-ces-2026-225653684.html\" target=\"_blank\">NVIDIA</a> has unveiled the G-Sync Pulsar, which it calls the \u201clatest evolution of [its] pioneering VRR (variable refresh rate) technology,\u201d at CES 2026. The new tech promises a gaming experience that\u2019s free of stutter with buttery smooth motion, which is made possible by pulsing the display\u2019s backlight. G-Sync Pulsar displays have multiple horizontal backlight sections th"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/razers-project-madison-concept-chair-has-reactive-lighting-immersive-audio-and-multi-zone-haptics-140000118.html?src=rss",
+        "title": "Razer's Project Madison concept chair has reactive lighting, immersive audio and multi-zone haptics",
+        "link": "https://www.engadget.com/gaming/razers-project-madison-concept-chair-has-reactive-lighting-immersive-audio-and-multi-zone-haptics-140000118.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Razer is once again thinking big about what a gaming chair can do, and its concept for CES 2026 isn't just a chair but an entire multisensory experience to match whatever's happening on-screen. The concept, called Project Madison, combines reactive lighting, spatial audio and multi-zone haptic feedback to make the player feel more immersed in the in-game environment. We're talking Razer Chroma light strips along the head flaps, THX Spatial Audio for 5.1 or 7.1 surround sound and six haptic mo"
+    },
+    {
+        "id": "https://www.engadget.com/gaming/razers-project-motoko-is-a-concept-gaming-headset-that-doubles-as-an-ai-wearable-140000534.html?src=rss",
+        "title": "Razer's Project Motoko is a concept gaming headset that doubles as an AI wearable",
+        "link": "https://www.engadget.com/gaming/razers-project-motoko-is-a-concept-gaming-headset-that-doubles-as-an-ai-wearable-140000534.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>We see plenty of far-out ideas on the CES show floor, and this year Razer brought in a concept piece called Project Motoko. The device is Razer's take on blurring the line between a gaming headset and an AI-powered wearable for daily life. Or it's a way for <em>Ghost in the Shell</em> fans to feel affronted by Razer taking The Major's name in vain, take your pick.&nbsp;</p><p>Project Motoko is powered by Qualcomm's Snapdragon platforms. The headset has a pair of first-person view cameras posi"
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/06/1130744/the-download-our-predictions-for-ai-and-good-climate-news/",
+        "title": "The Download: our predictions for AI, and good climate news",
+        "link": "https://www.technologyreview.com/2026/01/06/1130744/the-download-our-predictions-for-ai-and-good-climate-news/",
+        "published": "Tue, 06 Jan 2026 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. What\u2019s next for AI in 2026 In an industry in constant flux, sticking your neck out to predict what\u2019s coming next may seem reckless. (AI bubble? What AI bubble?) But for the last&#8230;"
+    },
+    {
+        "id": "https://blgardner.github.io/prism.tools/",
+        "title": "Show HN: Prism.Tools \u2013 Free and privacy-focused developer utilities",
+        "link": "https://blgardner.github.io/prism.tools/",
+        "published": "Tue, 06 Jan 2026 12:33:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46511469\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/viture-beast-xr-glasses-review/",
+        "title": "These XR glasses gave me a 174-inch screen to work with - and a shockingly wide field of view",
+        "link": "https://www.zdnet.com/article/viture-beast-xr-glasses-review/",
+        "published": "Tue, 06 Jan 2026 14:00:42 GMT",
+        "source": "Latest news",
+        "summary": "With a bright Sony micro-OLED display and 120Hz refresh rate, the Beast XR are Viture's best glasses yet."
+    },
+    {
+        "id": "https://www.zdnet.com/article/weird-tech-ces-2026/",
+        "title": "The weirdest tech I've seen at CES 2026 - so far",
+        "link": "https://www.zdnet.com/article/weird-tech-ces-2026/",
+        "published": "Tue, 06 Jan 2026 13:42:00 GMT",
+        "source": "Latest news",
+        "summary": "The show floor at CES is packed with strange, odd, and unusual gadgets."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/nvidia-at-ces-2026-another-exit-at-nexus-vp/articleshow/126375725.cms",
+        "title": "Nvidia at CES 2026; Another exit at Nexus VP",
+        "link": "https://economictimes.indiatimes.com/tech/newsletters/tech-top-5/nvidia-at-ces-2026-another-exit-at-nexus-vp/articleshow/126375725.cms",
+        "published": "Tue, 06 Jan 2026 19:08:19 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "AI chipmaker Nvidia put forward its vision to own the AI stack at CES 2026 in Las Vegas. This and more in today's ETtech Top 5."
+    },
+    {
+        "id": "https://yourstory.com/2026/01/nykaa-dalal-street-brokerages-divided-beauty-stock-price",
+        "title": "Nykaa splits D-Street: Why brokerages are divided on India\u2019s beauty bellwether",
+        "link": "https://yourstory.com/2026/01/nykaa-dalal-street-brokerages-divided-beauty-stock-price",
+        "published": "Tue, 06 Jan 2026 10:36:37 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "The valuation debate around Nykaa has intensified, with two leading brokerages offering very divergent views on the stock within a week. The debate isn\u2019t about Nykaa\u2019s business\u2014everyone agrees it's one of India\u2019s best consumer internet stories. But how much of its future growth is already priced in?"
+    },
+    {
+        "id": "https://inc42.com/buzz/blue-tokais-fy25-loss-narrows-20-to-inr-50-cr/",
+        "title": "Blue Tokai\u2019s FY25 Loss Narrows 20% To INR 50 Cr",
+        "link": "https://inc42.com/buzz/blue-tokais-fy25-loss-narrows-20-to-inr-50-cr/",
+        "published": "Tue, 06 Jan 2026 14:08:26 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"blue tokai FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Blue-Tokai-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Speciality coffee chain Blue Tokai Coffee Roasters\u2019 net loss declined 20.2% to INR 50.2 Cr in the year ended March&#8230;"
     }
 ]
