📚 Auto-update: News data refreshed - 2026-01-06 15:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -42398,5 +42398,93 @@
         "published": "Tue, 06 Jan 2026 14:08:26 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"blue tokai FY25\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Blue-Tokai-ftr.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Speciality coffee chain Blue Tokai Coffee Roasters\u2019 net loss declined 20.2% to INR 50.2 Cr in the year ended March&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/06/meta-pauses-international-expansion-of-its-ray-ban-display-glasses/",
+        "title": "Meta pauses international expansion of its Ray-Ban Display glasses",
+        "link": "https://techcrunch.com/2026/01/06/meta-pauses-international-expansion-of-its-ray-ban-display-glasses/",
+        "published": "Tue, 06 Jan 2026 15:04:49 +0000",
+        "source": "TechCrunch",
+        "summary": "Meta had originally planned to launch the glasses in France, Italy, Canada, and the U.K. in early 2026."
+    },
+    {
+        "id": "https://www.theverge.com/news/856422/meta-ray-ban-display-emg-handwriting-teleprompter",
+        "title": "Meta is adding a teleprompter and virtual writing to its Ray-Ban Display glasses",
+        "link": "https://www.theverge.com/news/856422/meta-ray-ban-display-emg-handwriting-teleprompter",
+        "published": "2026-01-06T10:11:04-05:00",
+        "source": "The Verge",
+        "summary": "Meta is giving Ray-Ban Display users an option to text on their glasses without needing their phone or a keyboard, only the Meta Neural Band. The new EMG handwriting feature, announced on Tuesday during CES, allows users to physically write with their hand on any surface, rather than texting. It's currently rolling out as an [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/podcast/856248/ces-2026-gadgets-vergecast",
+        "title": "The robots, phones, and Lego of CES 2026",
+        "link": "https://www.theverge.com/podcast/856248/ces-2026-gadgets-vergecast",
+        "published": "2026-01-06T10:03:27-05:00",
+        "source": "The Verge",
+        "summary": "This year's Consumer Electronics Show is only just getting into full swing, and we've already seen a deluge of gadget announcements. There are the staples, of course: gigantic TVs, smart home sensors, phone accessories, weirdly elaborate ways to charge your devices. Wouldn't be CES without them. But this year in Las Vegas, there are also [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/hbo-industry-season-4-age-verification/",
+        "title": "\u2018Industry\u2019 Takes on the Age Verification Wars",
+        "link": "https://www.wired.com/story/hbo-industry-season-4-age-verification/",
+        "published": "Tue, 06 Jan 2026 15:00:00 +0000",
+        "source": "WIRED",
+        "summary": "In the HBO show\u2019s fourth season, Industry proves to be more prescient than it\u2019s ever been."
+    },
+    {
+        "id": "https://arstechnica.com/cars/2026/01/sony-wants-its-afeela-ev-to-be-heavy-on-ai-also-shows-crossover/",
+        "title": "Spot the difference: Sony\u2019s electric car gets a crossover version",
+        "link": "https://arstechnica.com/cars/2026/01/sony-wants-its-afeela-ev-to-be-heavy-on-ai-also-shows-crossover/",
+        "published": "Tue, 06 Jan 2026 13:49:02 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "AI will help drive you and entertain you, according to Sony Honda Mobility."
+    },
+    {
+        "id": "https://www.engadget.com/ai/everything-nvidia-announced-at-ces-2026-225653684.html?src=rss",
+        "title": "Everything NVIDIA announced at CES 2026",
+        "link": "https://www.engadget.com/ai/everything-nvidia-announced-at-ces-2026-225653684.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:30:50 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Jensen Huang took to the CES stage on Monday to share the latest from NVIDIA,  and while the presentation was more a refresher of technologies the company has been working on for the past few years, there were a couple of notable announcements. </p><p>NVIDIA announced  Alpamayo, a family of open-source reasoning models designed to guide autonomous vehicles through difficult driving situations. The centerpiece of the release is Alpamayo 1 , a 10-billion parameter chain-of-thought system NVIDIA"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-day-0-the-biggest-news-you-missed-from-the-shows-monday-press-conferences-142811448.html?src=rss",
+        "title": "CES 2026 day 0: The biggest news you missed from the show's Monday press conferences",
+        "link": "https://www.engadget.com/big-tech/ces-2026-day-0-the-biggest-news-you-missed-from-the-shows-monday-press-conferences-142811448.html?src=rss",
+        "published": "Tue, 06 Jan 2026 14:28:11 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-from-techs-biggest-conference-in-las-vegas-153146838.html\" target=\"_blank\">CES 2026</a> officially opens today, but much of the show\u2019s biggest announcements already landed during Monday\u2019s press conferences and early events. AI was everywhere, chipmakers dominated the schedule and a handful of brands used the pre-show window to quietly drop meaningful hardware updates.</p><p>Below are the biggest announcements and trends from"
+    },
+    {
+        "id": "https://philippdubach.com/standalone/hn-sentiment/",
+        "title": "65% of Hacker News Posts Have Negative Sentiment, and They Outperform",
+        "link": "https://philippdubach.com/standalone/hn-sentiment/",
+        "published": "Tue, 06 Jan 2026 14:45:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46512881\">Comments</a>"
+    },
+    {
+        "id": "https://cedardb.com/blog/german_strings/",
+        "title": "Why German Strings Are Everywhere?",
+        "link": "https://cedardb.com/blog/german_strings/",
+        "published": "Tue, 06 Jan 2026 13:30:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46511981\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/neurable-hyperx-brain-reading-gaming-headphones-ces-2026/",
+        "title": "I watched a gamer use brain-reading headphones under pressure - and he locked in fast",
+        "link": "https://www.zdnet.com/article/neurable-hyperx-brain-reading-gaming-headphones-ces-2026/",
+        "published": "Tue, 06 Jan 2026 14:52:24 GMT",
+        "source": "Latest news",
+        "summary": "Neurable returns with its AI-powered brain-reading algorithm, this time in a partnership with HyperX."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/uk-tells-musk-to-act-fast-on-groks-sexualised-ai-images-report/articleshow/126376741.cms",
+        "title": "UK tells Musk to urgently address intimate 'deepfakes' on X",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/uk-tells-musk-to-act-fast-on-groks-sexualised-ai-images-report/articleshow/126376741.cms",
+        "published": "Tue, 06 Jan 2026 20:07:34 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Britain \u200bhas urged \u2060Elon Musk's social media site \u200cX \u200cto urgently address \u200cmisuse of its artificial intelligence tool Grok, \u200bSky News \u200breported on \u200cTuesday, \u200dfollowing reports \u200dit was generating fake \u200csexualised images."
     }
 ]
